--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ant-design-vue",
-  "version": "4.2.6",
-  "title": "Ant Design Vue",
+  "name": "bmc_ant-design-vue",
+  "version": "0.0.1",
+  "title": "BMC/ant-design-vue",
   "description": "An enterprise-class UI design language and Vue-based implementation",
   "keywords": [
     "vue",
@@ -231,6 +231,7 @@
     "reqwest": "^2.0.5",
     "rimraf": "^3.0.0",
     "rucksack-css": "^1.0.2",
+    "sass": "^1.87.0",
     "selenium-server": "^3.0.1",
     "semver": "^7.0.0",
     "slash": "^3.0.0",
